# stateball

./: .dockerignore  .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
liveball/: .env.example  Dockerfile  Taskfile.yml  pyproject.toml
liveball/backend/: config.py  db.py  main.py  redis_client.py
liveball/backend/auth/: __main__.py  db.py  dependencies.py  jwt.py  middleware.py  models.py  passwords.py  router.py  seed.py
liveball/backend/routers/: artifacts.py  games.py  health.py  sim.py  stats.py
liveball/data_feed/: __main__.py  db.py  game_state_recorder.py  poll_log.py  redis_client.py  server.py  sim_recorder.py  snapshot.py
liveball/data_feed/sim/: connection.py  dispatcher.py  hydrator.py  redis_queue.py  standalone.py  worker.py
liveball/deploy/: data-feed-deployment.yaml  data-feed-service.yaml  deployment.yaml  externalsecret.yaml  kustomization.yaml  redis-service.yaml  redis-statefulset.yaml  service.yaml  sim-worker-deployment.yaml
liveball/frontend/: index.html  package-lock.json  package.json
liveball/frontend/src/: App.tsx  index.css  main.tsx
warehouse/: Dockerfile  pyproject.toml
warehouse/deploy/: dagster-db.yaml  dagster-helmrelease.yaml  dagster-helmrepository.yaml  ducklake-db-nodeport.yaml  ducklake-db.yaml  externalsecret.yaml  kustomization.yaml  minio-nodeport.yaml  minio.yaml  namespace.yaml
warehouse/manifests/base/: kustomization.yml  minio.yml
warehouse/orchestration/: .user.yml  dbt_project.yml  definitions.py  lib.py  profiles.yml  resources.py  secrets.py
warehouse/orchestration/assets/: __init__.py  _configs.py  _shared.py  (+5 more)
(+79 files in other folders)
