[project]
name = "liveball"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "simulator",
    "execution",
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic-settings==2.13.1",
    "duckdb==1.4.4",
    "httpx>=0.27.0,<1.0",
    "pytz>=2024.1",
    "PyJWT==2.12.0",
    "argon2-cffi==25.1.0",
    "psycopg[binary]==3.3.3",
    "websockets>=16.0,<17.0",
    "cryptography>=42.0,<47.0",
    "redis[hiredis]>=5.0,<6",
]

[tool.uv.sources]
simulator = { workspace = true }
execution = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["backend", "data_feed"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
