[project]
name = "warehouse"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "simulator",
    "dlt[ducklake,filesystem,parquet]>=1.17.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "dagster>=1.11",
    "dagster-webserver>=1.11",
    "dagster-postgres>=0.27",
    "dagster-dbt>=0.27",
    "dbt-duckdb>=1.8.0",
    "duckdb>=1.2.0",
    "pybaseball==2.2.7",
    "optuna>=4.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

[tool.uv.sources]
simulator = { workspace = true }

[tool.dagster]
module_name = "orchestration.definitions"
